CLOUDIFY-2474 send tasks and listen to events staight from route/ruby without jruby/jython