@@ -5,11 +5,9 @@
 # Optionally switching to required jruby version and running
 # The service using rack up.
 #
-# Parameter 1: Whether to switch to jruby-1.7.3 using rvm.
+# Parameter 1: Whether to switch to ruby-2.1.0 using rvm.
 # Parameter 2: Service port.
 #
-
-export JRUBY_OPTS=-J-XX:MaxPermSize=196M
 
 if [ $# -ne 2 ]; then
     echo "Illegal number of arguments - expected <use_rvm|true/false> <port>"
@@ -20,8 +18,8 @@ use_rvm=$1
 port=$2
 
 if [ "$use_rvm" == "true" ]; then
-    rvm use jruby-1.7.3
+    rvm use ruby-2.1.0
 fi
 cd ..
 cd workflow-service
-RACK_ENV=development rackup -p $port
+RACK_ENV=development unicorn -l 0.0.0.0:${port}
